Update jvm.config