@@ -1,10 +1,9 @@
 -server
--Xmx2G
+-Xmx16G
 -XX:+UseG1GC
 -XX:G1HeapRegionSize=32M
 -XX:+UseGCOverheadLimit
 -XX:+ExplicitGCInvokesConcurrent
 -XX:+HeapDumpOnOutOfMemoryError
 -XX:+ExitOnOutOfMemoryError
--Djdk.attach.allowAttachSelf=true
 
